TomcatServletMemShellFromThread and fix bugssss